add_subdirectory(hello_imgui)

if (HELLOIMGUI_BUILD_DEMOS)
    add_subdirectory(hello_imgui_demos)
endif()
if(HELLOIMGUI_BUILD_TESTS)
    add_subdirectory(hello_imgui_tests)
endif()
if(HELLOIMGUI_WITH_NETIMGUI AND HELLOIMGUI_HAS_OPENGL3 AND HELLOIMGUI_USE_GLFW3)
    add_subdirectory(netimgui_remote_display)
endif()
